--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "maatwebsite/excel": "^3.1",
+        "maatwebsite/excel": "~2.1.0",
         "realrashid/sweet-alert": "^3.2"
     },
     "require-dev": {
